k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roi_service
spec:
  type: ClusterIP
  selector:
    app: roi_service
  ports:
    - port: 80
      targetPort: 8000
