k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roi-service
spec:
  ingressClassName: traefik
  rules:
    - host: roi-broken.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roi-service
                port:
                  number: 80
